Administrations des items/users

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -169,6 +169,7 @@
                                                     )) }}
                                                 </ul>
                                             </li>
+                                            <li><a href="{{ path('devoirsManag') }}">Des devoirs</a></li>
                                             <li><a href="{{ path('usersManag') }}">Des utilisateurs</a></li>
                                         </ul>
                                     </li>
